# csp-simple-bodies

./: CMakeLists.txt  README.md
shaders/: SimpleBody.frag.glsl  SimpleBody.vert.glsl
src/: Plugin.cpp  Plugin.hpp  SimpleBody.cpp  SimpleBody.hpp  SimpleBodyRenderer.cpp  SimpleBodyRenderer.hpp  SimplePlanet.cpp  SimplePlanet.hpp  logger.cpp  logger.hpp
textures/: planet-texture-credits.md
